# ai-email-assist

./: .env.example  .gitignore  README.md  config.py  credentials.json  pyproject.toml  requirements.txt  token.json  token.pickle
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  agent.py  gemini_agent.py  rag_agent.py
app/graph/: __init__.py  workflow.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  email_sync.py
app/tools/: __init__.py  gmail.py  list_models.py  named_entity_recognition.py
app/utils/: __init__.py  embeddings.py  gmail.py  vector_store.py
data/vector_store/a8d12402-9958-465e-8174-771a31975775/: index_metadata.pickle
tests/agents/: test_gemini_agent.py  test_rag_agent.py
tests/graph/: test_workflow.py
tests/services/: test_email_sync.py
tests/tools/: test_gmail.py
tests/utils/: test_embeddings.py  test_vector_store.py
