[project]
name = "ai-email-assist"
version = "0.0.1"
description = "Ai Gmail assistant to filter spam, ads and scams using knowledge graph & RAG in LangGraph."
authors = [
    {name = "rosiefaulkner",email = "faulknerproject@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "langgraph>=0.4.5",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain-community>=0.0.27",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-elasticsearch>=0.3.0",
    "langchain-pinecone>=0.2.3",
    "msgspec>=0.18.6",
    "langchain-mongodb>=0.1.9",
    "langchain-cohere>=0.2.4",
    "isort (>=6.0.1,<7.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "uv (>=0.7.19,<0.8.0)",
    "google-genai (>=1.24.0,<2.0.0)",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "B",    # black
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"